--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/javascripts/manifest.json">
 </head>
 <body style="background:#fdc9a7;">
 <div id="main" class="container-fluid h-100 d-flex flex-column">
