--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
     <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
         <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
         <div id="stop-interval" class="col alert alert-info mb-0">00:02:16</div>
-        <div class="col alert alert-success mb-0">이전결과</div>
-        <div class="col alert alert-danger mb-0">00:02</div>
+        <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
+        <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
         <div class="col alert alert-warning mb-0">3904.93</div>
         <div class="col alert alert-dark mb-0">OVER</div>
     </div>
@@ -61,8 +61,12 @@
     });
     var sHeight = screen.height;
     var sWidth = screen.width;
-    document.querySelector('#start-interval').textContent = sHeight;
-    document.querySelector('#stop-interval').textContent = sWidth;
+    var wHeight = window.innerHeight;
+    var wWidth = window.innerWidth;
+    document.querySelector('#start-interval').textContent = sHeight + 'h';
+    document.querySelector('#stop-interval').textContent = sWidth + 'w';
+    document.querySelector('#window-height').textContent = wHeight + 'h';
+    document.querySelector('#window-width').textContent = wWidth + 'w';
 </script>
 <script src="/javascripts/app.js"></script>
 </body>
