모바일이 해상도로 조절하지 않고 원 해상도로 볼수 있게 변경.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><%= title %></title>
 
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="manifest" href="/javascripts/manifest.json">
 </head>
-<body style="background:#fdc9a7;">
+<body>
 <div id="main" class="container-fluid h-100 d-flex flex-column">
     <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
         <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
@@ -47,6 +47,7 @@
 <script src="https://www.amcharts.com/lib/4/core.js"></script>
 <script src="https://www.amcharts.com/lib/4/charts.js"></script>
 <script src="https://www.amcharts.com/lib/4/themes/material.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/dark.js"></script>
 <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 <script src="https://www.amcharts.com/lib/4/lang/ko_KR.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
