--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,27 +15,27 @@
 <div id="main" class="container-fluid h-100 d-flex flex-column">
     <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
         <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
-        <div id="stop-interval" class="col alert alert-info mb-0">00:02:16</div>
+        <div id="current-time" class="col alert alert-info mb-0">00:00:00</div>
         <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
         <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
         <div class="col alert alert-warning mb-0">3904.93</div>
         <div class="col alert alert-dark mb-0">OVER</div>
     </div>
     <div class="row flex-fill d-flex justify-content-start">
-        <div id="left_chart_div" class="col" style="background:#8cdfbf;">Left chart area</div>
+        <div id="left_chart_div" class="col" style="border:1px solid green;">Left chart area</div>
         <div id="chart_div" class="col-10">
             Chart area
         </div>
-        <div id="right_chart_div" class="col" style="background:#e8c3fd;">Right chart area</div>
+        <div id="right_chart_div" class="col" style="border: 1px solid red;">Right chart area</div>
     </div>
     <div class="row flex-shrink-0 mb-0" style="background:#bfcafd;">
         <div class="col alert alert-primary mb-0">현재가격</div>
-        <div class="col alert alert-info mb-0">3903.22</div>
+        <div id="current-value" class="col alert alert-info mb-0">0</div>
         <div class="col alert alert-danger mb-0">UP</div>
         <div class="col alert alert-primary mb-0">기준점</div>
-        <div class="col alert alert-info mb-0">3903.22</div>
+        <div id="base-value" class="col alert alert-info mb-0">0</div>
         <div class="col alert alert-primary mb-0">결과</div>
-        <div class="col alert alert-info mb-0">3904.93</div>
+        <div id="result-value" class="col alert alert-info mb-0">0</div>
         <div class="col alert alert-warning mb-0">HIGH</div>
     </div>
 </div>
@@ -51,9 +51,9 @@
 <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 <script src="https://www.amcharts.com/lib/4/lang/ko_KR.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.slim.js"></script>
-<!--<script src="/socket.io/socket.io.js"></script>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
 <script>
     var socket = io.connect('http://localhost:3000');
     socket.on('news', function (data) {
@@ -64,10 +64,10 @@
     var sWidth = screen.width;
     var wHeight = window.innerHeight;
     var wWidth = window.innerWidth;
-    document.querySelector('#start-interval').textContent = sHeight + 'h';
-    document.querySelector('#stop-interval').textContent = sWidth + 'w';
-    document.querySelector('#window-height').textContent = wHeight + 'h';
-    document.querySelector('#window-width').textContent = wWidth + 'w';
+    // document.querySelector('#start-interval').textContent = sHeight + 'h';
+    // document.querySelector('#stop-interval').textContent = sWidth + 'w';
+    // document.querySelector('#window-height').textContent = wHeight + 'h';
+    // document.querySelector('#window-width').textContent = wWidth + 'w';
 </script>
 <script src="/javascripts/app.js"></script>
 </body>
