--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
         <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
         <div class="col alert alert-warning mb-0">3904.93</div>
-        <div class="col alert alert-dark mb-0">OVER</div>
+        <div id="game-over" class="col alert alert-dark mb-0">OVER</div>
     </div>
     <div class="row flex-fill d-flex justify-content-start">
         <div id="left_chart_div" class="col">Left chart area</div>
