--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
 <script>
-    var socket = io.connect('http://localhost:3000');
+    var socket = io.connect(location.href);
     socket.on('news', function (data) {
     	console.log('news data', data);
 	    socket.emit('my other event', { my: 'data' });
