--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,3 +55,23 @@ body {
     border-left: 2px solid #979797;
     border-right: 2px solid #979797;
 }
+
+.overlay {
+    color: #dfdfdf;
+}
+
+#base-value-overlay {
+    position: absolute;
+    top: 20%;
+    left: 15%;
+    font-size: 2em;
+    display: none;
+}
+
+#result-value-overlay {
+    position: absolute;
+    top: 20%;
+    right: 15%;
+    font-size: 2em;
+    display:none;
+}
