--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,10 +93,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.slim.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
+<script src="/javascripts/main.js"></script>
 <script>
-	am4core.useTheme(am4themes_animated);
-	am4core.useTheme(am4themes_dark);
+		document.addEventListener('DOMContentLoaded', function () {
+			springChartApp.start();
+		});
 </script>
-<script src="/javascripts/app.js"></script>
 </body>
 </html>
