--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 html, body {
     height: 100%;
 }
@@ -10,6 +11,31 @@ body {
     font: 14px "Noto Sans KR", Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     width: 100%;
     background: #222222;
+}
+
+#chart-warp {
+    display: none;
+}
+
+#chart-warp, #chartdiv {
+    height: 100%;
+    width: 100%;
+}
+
+#amcharts-logo {
+    background: url('https://www.amcharts.com/wp-content/themes/amcharts4/css/img/logo.svg') no-repeat,linear-gradient(transparent,transparent);
+    position: relative;
+    display: block;
+    width: 75px;
+    height: 21px;
+    background-size: contain;
+    text-indent: -9999px;
+    z-index: 2;
+    margin-top: 15px;
+}
+
+#main-warp {
+    height: 100%;
 }
 
 #main {
@@ -51,9 +77,12 @@ body {
     padding: 0;
 }
 
-#base_chart_div, #result_chart_div {
-    border-left: 2px solid #979797;
+#base_chart_div {
     border-right: 2px solid #979797;
+}
+
+#result_chart_div {
+    border-left: 2px solid #979797;
 }
 
 .overlay {
@@ -73,5 +102,5 @@ body {
     top: 20%;
     right: 15%;
     font-size: 2em;
-    display:none;
+    display: none;
 }
