--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,34 +18,40 @@
     </script>
 </head>
 <body>
-<div id="main" class="container-fluid h-100 d-flex flex-column">
-    <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
-        <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
-        <div id="current-time" class="col alert alert-info mb-0">00:00:00</div>
-        <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
-        <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
-        <div class="col alert alert-warning mb-0">3904.93</div>
-        <div id="game-over" class="col alert alert-dark mb-0">OVER</div>
-    </div>
-    <div class="row flex-fill d-flex justify-content-start">
-        <div id="base_chart_div" class="col">Left chart area</div>
-        <div id="main_chart_div" class="col-10">
-            Chart area
-        </div>
-        <div id="result_chart_div" class="col">Right chart area</div>
-    </div>
-    <div class="row flex-shrink-0 mb-0" style="background:#bfcafd;">
-        <div class="col alert alert-primary mb-0">현재가격</div>
-        <div id="current-value" class="col alert alert-info mb-0">0</div>
-        <div class="col alert alert-danger mb-0">UP</div>
-        <div class="col alert alert-primary mb-0">기준점</div>
-        <div id="base-value" class="col alert alert-info mb-0">0</div>
-        <div class="col alert alert-primary mb-0">결과</div>
-        <div id="result-value" class="col alert alert-info mb-0">0</div>
-        <div class="col alert alert-warning mb-0">HIGH</div>
+<div id="chart-warp">
+    <a id="amcharts-logo" href="https://www.amcharts.com/" id="logo" rel="home">amCharts</a>
+    <div id="chartdiv">
     </div>
 </div>
-
+<div id="main-warp">
+    <div id="main" class="container-fluid h-100 d-flex flex-column">
+        <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
+            <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
+            <div id="current-time" class="col alert alert-info mb-0">00:00:00</div>
+            <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
+            <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
+            <div class="col alert alert-warning mb-0">3904.93</div>
+            <div id="game-over" class="col alert alert-dark mb-0">OVER</div>
+        </div>
+        <div class="row flex-fill d-flex justify-content-start">
+            <div id="base_chart_div" class="col">Left chart area</div>
+            <div id="main_chart_div" class="col-10">
+                Chart area
+            </div>
+            <div id="result_chart_div" class="col">Right chart area</div>
+        </div>
+        <div class="row flex-shrink-0 mb-0" style="background:#bfcafd;">
+            <div class="col alert alert-primary mb-0">현재가격</div>
+            <div id="current-value" class="col alert alert-info mb-0">0</div>
+            <div class="col alert alert-danger mb-0">UP</div>
+            <div class="col alert alert-primary mb-0">기준점</div>
+            <div id="base-value" class="col alert alert-info mb-0">0</div>
+            <div class="col alert alert-primary mb-0">결과</div>
+            <div id="result-value" class="col alert alert-info mb-0">0</div>
+            <div class="col alert alert-warning mb-0">HIGH</div>
+        </div>
+    </div>
+</div>
 <div id="overlay" class="overlay">
     <div id="overlay-text">스페셜 매칭 시작!!!!!</div>
 </div>
@@ -101,6 +107,7 @@
 <script src="/javascripts/constant.js"></script>
 <script src="/javascripts/mainChart.js"></script>
 <script src="/javascripts/upDownChart.js"></script>
+<script src="/javascripts/dummyChart.js"></script>
 <script src="/javascripts/main.js"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', function() {
