--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,71 +25,63 @@
 </div>
 <div id="main-warp">
     <div id="main" class="container-fluid h-100 d-flex flex-column">
-        <div class="row flex-shrink-0 py-0" style="background:#bfcafd;">
-            <div id="start-interval" class="col alert alert-primary mb-0">현재시간</div>
-            <div id="current-time" class="col alert alert-info mb-0">00:00:00</div>
-            <div id="window-height" class="col alert alert-success mb-0">이전결과</div>
-            <div id="window-width" class="col alert alert-danger mb-0">00:02</div>
-            <div class="col alert alert-warning mb-0">3904.93</div>
-            <div id="game-over" class="col alert alert-dark mb-0">OVER</div>
-        </div>
         <div class="row flex-fill d-flex justify-content-start">
             <div id="base_chart_div" class="col">Left chart area</div>
-            <div id="main_chart_div" class="col-10">
-                Chart area
-            </div>
+            <div id="main_chart_div" class="col-11"></div>
             <div id="result_chart_div" class="col">Right chart area</div>
-        </div>
-        <div class="row flex-shrink-0 mb-0" style="background:#bfcafd;">
-            <div class="col alert alert-primary mb-0">현재가격</div>
-            <div id="current-value" class="col alert alert-info mb-0">0</div>
-            <div class="col alert alert-danger mb-0">UP</div>
-            <div class="col alert alert-primary mb-0">기준점</div>
-            <div id="base-value" class="col alert alert-info mb-0">0</div>
-            <div class="col alert alert-primary mb-0">결과</div>
-            <div id="result-value" class="col alert alert-info mb-0">0</div>
-            <div class="col alert alert-warning mb-0">HIGH</div>
         </div>
     </div>
 </div>
+<div id="current_time_overlay">
+    <span style="color:#a0b8d1">현재시간:</span>
+    <span>00:02:16</span>
+</div>
+<div id="current_price_overlay">
+    <div class="price_group" style="display: inline-block">
+    <span style="color:#a0b8d1">현재가격:</span>
+    <span>3903.22</span>
+    </div>
+    <span class="up_down_indicator">▲</span>
+</div>
+
+<div id="start_time_overlay" style="position:absolute;bottom:1%;left:5%;color:#cce1fa;font-size:1.5em;">
+    01:00
+</div>
+<div id="start_time_overlay" style="position:absolute;bottom:1%;left:49%;color:#cce1fa;font-size:1.5em;">
+    02:00
+</div>
+<div id="start_time_overlay" style="position:absolute;bottom:1%;right:5%;color:#cce1fa;font-size:1.5em;">
+    03:00
+</div>
+
 <div id="overlay" class="overlay">
     <div id="overlay-text">스페셜 매칭 시작!!!!!</div>
 </div>
-<div id="base-value-overlay" class="overlay">
+<div id="base_value_overlay" class="overlay">
+    <div style="height:87px;"></div>
     <table>
-        <colgroup>
-            <col width="150">
-        </colgroup>
+        <tr class="base">
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>기준(평균)</span><span class="value">5009.25</span></div></td>
+        </tr>
         <tr class="binance">
-            <td>BINANCE</td>
-            <td><span class="value">5009.25</span></td>
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>바이낸스</span><span class="value">5009.25</span></div></td>
         </tr>
         <tr class="idax">
-            <td>IDAX</td>
-            <td><span class="value">5009.25</span></td>
-        </tr>
-        <tr class="base">
-            <td>기준값</td>
-            <td><span class="value">5009.25</span></td>
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>IDAX</span><span class="value">5009.25</span></div></td>
         </tr>
     </table>
 </div>
-<div id="result-value-overlay" class="overlay">
+<div id="result_value_overlay" class="overlay">
+    <div style="color:red;text-align:center;font-weight:bold;font-size:2.1em;">HIGH</div>
     <table>
-        <colgroup>
-            <col width="150">
-        </colgroup>
+        <tr class="base">
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>결과(평균)</span><span class="value">5009.25</span></div></td>
+        </tr>
         <tr class="binance">
-            <td>BINANCE</td>
-            <td><span class="value">5009.25</span></td>
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>바이낸스</span><span class="value">5009.25</span></div></td>
         </tr>
         <tr class="idax">
-            <td>IDAX</td>
-            <td><span class="value">5009.25</span></td>
-        </tr>
-        <tr class="base">
-            <td>결과값</td>
-            <td><span class="value">5009.25</span></td>
+            <td><div style="background: rgba(24, 36, 49, 0.5);padding:5px 20px;border-radius:25px;"><span>IDAX</span><span class="value">5009.25</span></div></td>
         </tr>
     </table>
 </div>
