--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 #amcharts-logo {
-    background: url('https://www.amcharts.com/wp-content/themes/amcharts4/css/img/logo.svg') no-repeat,linear-gradient(transparent,transparent);
+    background: url('https://www.amcharts.com/wp-content/themes/amcharts4/css/img/logo.svg') no-repeat, linear-gradient(transparent, transparent);
     position: relative;
     display: block;
     width: 75px;
@@ -42,9 +42,166 @@ body {
     height: 100%;
 }
 
-#overlay {
+#main_overlay {
     position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+}
+
+#main_overlay .top {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    font-size: 1.8em;
+    color: white;
+    background: rgba(23, 34, 46, 0.8);
+    border-radius: 25px;
+    padding: 5px 20px;
+    box-shadow: 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+#main_overlay .mid {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+    -ms-transform: translate(-50%, -45%);
+    color: white;
+    width: 275px;
     display: none;
+}
+
+#main_overlay .mid table .label .title {
+    font-size: 1.5em;
+}
+
+#main_overlay .mid table .label .value {
+    font-size: 2.2em;
+}
+
+#main_overlay .top .title {
+    color: #8BA2B9;
+}
+
+#main_overlay .top .value {
+    color: #CCE1FA;
+}
+
+#main_overlay .top.current_price {
+    width: 270px;
+}
+
+#main_overlay .top .up_down_indicator.up {
+    color: #D01010;
+}
+
+#main_overlay .top .up_down_indicator.down {
+    color: #0052D5;
+}
+
+#main_overlay .mid .high_low_text {
+    text-align: center;
+    font-weight: bold;
+    font-size: 4em;
+    text-shadow : -3px 0 2px #1E3F5F, 0 3px 2px #1E3F5F, 3px 0 2px #1E3F5F, 0 -3px 2px #1E3F5F;
+}
+
+#main_overlay .mid .high_low_text.high,
+#main_overlay .mid .high_low_text.up {
+    color: #FF2727;
+}
+
+#main_overlay .mid .high_low_text.low.down,
+#main_overlay .mid .high_low_text.down {
+    color: #2679FF;
+}
+
+#main_overlay .time_label {
+    position: absolute;
+    bottom: 1%;
+    font-size: 1.5em;
+    color: #8BA2B9;
+}
+
+#main_overlay .start_time {
+    left: 8%;
+}
+
+#main_overlay .base_time {
+    left: 100%;
+}
+
+#main_overlay .end_time {
+    right: 8%;
+}
+
+#main_overlay .mid table .label {
+    text-align: right;
+}
+
+#main_overlay .mid table .title {
+    padding-right: 8px;
+}
+
+#main_overlay .mid table .binance td,
+#main_overlay .mid table .idax td {
+    padding: 0;
+}
+
+#main_overlay .mid table .label {
+    padding: 5px 20px;
+}
+
+#main_overlay .mid table .base .label {
+    background: rgba(12, 24, 36, 0.9);
+    border-radius: 25px;
+}
+
+#main_overlay .mid table .binance .label,
+#main_overlay .mid table .idax .label {
+    background: rgba(18, 29, 41, 0.9);
+}
+
+#main_overlay .mid table .label .title {
+    color: #8BA2B9;
+}
+
+#main_overlay .mid table .base .label .value {
+    color: #6FF53D;
+}
+
+#main_overlay .mid table .binance .label .value,
+#main_overlay .mid table .idax .label .value {
+    color: #CCE1FA;
+}
+
+#main_overlay .mid table .binance .label {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+#main_overlay .mid table .idax .label {
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+
+#main_overlay .mid table .idax {
+    border-top: 1px solid #0A1521;
+}
+
+#main_overlay .mid table .label.disable .value{
+    color: #8BA2B9 !important;
+}
+
+#break-time-overlay {
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
@@ -52,11 +209,12 @@ body {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2;
+    z-index: 3;
     cursor: pointer;
+    display: none;
 }
 
-#overlay-text {
+#break-time-overlay .overlay-text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -66,66 +224,12 @@ body {
     -ms-transform: translate(-50%, -50%);
 }
 
-.alert {
-    padding: 0;
-    font-size: 2em;
-    text-align: center;
-    font-weight: 500;
+#break-time-overlay .overlay {
+    color: #dfdfdf;
 }
 
 #main_chart_div, #base_chart_div, #result_chart_div {
     padding: 0;
-}
-
-.overlay {
-    color: #dfdfdf;
-}
-
-#base_value_overlay {
-    position: absolute;
-    top: 20%;
-    left: 15%;
-    font-size: 2em;
-    /*display: none;*/
-}
-
-#result_value_overlay {
-    position: absolute;
-    top: 20%;
-    right: 15%;
-    font-size: 2em;
-    /*display: none;*/
-}
-
-#current_time_overlay, #current_price_overlay, #up_down_overlay {
-    position: absolute;
-    top: 3%;
-    color: #cce1fa;
-    font-size: 2em;
-}
-
-#current_time_overlay {
-    left: 15%;
-    border-radius: 25px;
-    background: rgba(24, 36, 49, 0.5);
-    padding: 3px 20px;
-}
-
-#current_price_overlay {
-    right: 12%;
-}
-
-#current_price_overlay .price_group {
-    background: rgba(24, 36, 49, 0.5);
-    border-radius: 50px;
-    padding: 3px 20px;
-}
-
-#current_price_overlay .up_down_indicator {
-    background: rgba(24, 36, 49, 0.5);
-    color: #98130e;
-    padding: 3px 10px;
-    border-radius: 50px;
 }
 
 #main_chart_div {
