--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,15 +111,10 @@
     </div>
 </div>
 
-<div id="break-time-overlay" class="overlay">
-    <div class="overlay-text">
-        <div>START!!!</div>
-        <div>48초전</div>
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                 aria-valuemin="0" aria-valuemax="100" style="width: 75%">45초
-            </div>
-        </div>
+<div id="break_time_overlay" class="overlay">
+    <div class="overlay_text">
+        <div class="image" style="width:100%;height:264px;"></div>
+        <div class="label">30초</div>
     </div>
 </div>
 
