--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,6 +128,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.slim.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
 <script src="/javascripts/constant.js"></script>
 <script src="/javascripts/mainChart.js"></script>
 <script src="/javascripts/upDownChart.js"></script>
